tests/miniJava/neg/004331_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public class java { } java ( ) { return 0 ; } }
